# cats-vs-dogs-with-scikit-learn

./: .gitignore  01_image_preprocessing.ipynb  02_model_training.ipynb  03_validate_holdout_dataset.ipynb  README.md  cats_vs_dogs_kaggle.ipynb  pyproject.toml
models/: log_regression_baseline.joblib
