[project]
name = "cats-vs-dogs-with-scikit-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "embetter[sbert]>=0.7.0",
    "joblib>=1.5.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.2",
    "scikit-learn>=1.6.1",
]
